fixing some sizing issues with logo and publications

--- a/footer.html
+++ b/footer.html
@@ -11,17 +11,17 @@
           <h3 class="widget-title">PINE lab</h3>
           <p>Participation, Inclusion, and Education.</p>
           &nbsp;
+          <a
+          href="https://psyclin.github.io/PineLabs/index.html"
+          class="logo logo_image"
+        >
+          <img  
+            src="https://psyclin.github.io/PineLabs/images/PINE lab-logo NB.png"
+            alt=""
+            class="footer-logo"
+          />
         </div>
         <div class="col-lg-2 col-md-3 col-sm-5">
-          <a
-            href="https://psyclin.github.io/PineLabs/index.html"
-            class="logo logo_image"
-          >
-            <img
-              src="https://psyclin.github.io/PineLabs/images/PINE lab-logo NB.png"
-              alt=""
-            />
-          </a>
           <span class="toggle_menu visible-xs">
             <span></span>
           </span>
