Added new person -test
Added Chris lee page, added chris lee to lab members page, added publication

--- a/publications.html
+++ b/publications.html
@@ -143,6 +143,12 @@
                         S. Dobson &amp; H. Stuart (eds.). The Stigma of Mental
                         Illness. Oxford, England: Oxford University Press.
                       </li>
+                      <li>
+                        Chen, S-P, &amp; Stuart, H. (2021). Prejudices and
+                        discrimination related to substance use problems. In K.
+                        S. Dobson &amp; H. Stuart (eds.). The Stigma of Mental
+                        Illness. Oxford, England: Oxford University Press.
+                      </li>
                     </ul>
                     <h3 style="text-align: center">Journal Articles</h3>
 
