Footer image fix

--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,6 @@
           <img  
           src="https://psyclin.github.io/PineLabs/images/PINE lab-logo NB.png"
           alt=""
-          class="img-fluid"
           /> 
           <a href="https://psyclin.github.io/PineLabs/index.html"></a>
           <p>Participation, Inclusion, and Education.</p>
@@ -32,6 +31,7 @@
         class="col-md-4 col-sm-6 to_animate text-center"
         data-animation="fadeInUp"
       >
+      <div class="widget widget_text greylinks topmargin_20">
           <h3 class="widget-title">Contacts</h3>
           <p class="margin_0">University of Alberta, 1-84 Corbett Hall</p>
           <p class="margin_0">Edmonton, Alberta, Canada T6G 2G4</p>
@@ -40,7 +40,7 @@
           <p class="margin_0">
             <a href="mailto:shuping2@ualberta.ca ">shuping2@ualberta.ca </a>
           </p>
-        
+      </div>
       </div>
       
       <div
