adjusting project images

--- a/group_projects.html
+++ b/group_projects.html
@@ -290,7 +290,7 @@
                     <div class="vertical-item content-padding gallery-extended-item with_background rounded text-center">
                      
                     <div class="item-media">
-                      <img src="https://psyclin.github.io/PineLabs/images/Student Assessment.png" alt="">
+                      <img src="https://psyclin.github.io/PineLabs/images/diversity study.png" alt="">
                     </div>
                     <div class="item-content">
                       <h4 class="item-title">
@@ -331,7 +331,7 @@
                         class="vertical-item content-padding gallery-extended-item with_background rounded text-center"
                       >
                         <img
-                          src="https://psyclin.github.io/PineLabs/images/teaser01.jpg"
+                          src="https://psyclin.github.io/PineLabs/images/Student Assessment.png"
                           alt=""
                         />
 
