--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
 
     <link
       rel="stylesheet"
-      href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css"
+      href="css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="https://psyclin.github.io/PineLabs/css/animations.css"
+      href="css/animations.css"
     />
     <link
       rel="stylesheet"
-      href="https://psyclin.github.io/PineLabs/css/fonts.css"
+      href="css/fonts.css"
     />
     <link
       rel="stylesheet"
-      href="https://psyclin.github.io/PineLabs/css/main.css"
+      href="css/main.css"
       id="color-switcher-link"
     />
-    <script src="https://psyclin.github.io/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
       <script src="js/vendor/respond.min.js"></script>
