--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
     <link
       rel="stylesheet"
-      href="css/bootstrap.min.css"
+      href="https://www.pinelab.ca/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="css/animations.css"
+      href="https://www.pinelab.ca/css/animations.css"
     />
     <link
       rel="stylesheet"
-      href="css/fonts.css"
+      href="https://www.pinelab.ca/css/fonts.css"
     />
     <link
       rel="stylesheet"
-      href="css/main.css"
+      href="https://www.pinelab.ca/css/main.css"
       id="color-switcher-link"
     />
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
