--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://www.pinelab.ca/css/animations.css"
+      href="https://https://www.pinelab.ca/css/animations.css"
     />
     <link
       rel="stylesheet"
@@ -34,7 +34,7 @@
       href="https://www.pinelab.ca/css/main.css"
       id="color-switcher-link"
     />
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="https://www.pinelab.ca/js/vendor/modernizr-2.6.2.min.js"></script>
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
       <script src="js/vendor/respond.min.js"></script>
