testing css and js

--- a/footer.html
+++ b/footer.html
@@ -11,10 +11,10 @@
         <div class="widget widget_text greylinks topmargin_20">
           <h3 class="widget-title">PINE lab</h3>
           <img  
-          src="https://psyclin.github.io/PineLabs/images/PINE lab-logo NB.png"
+          src="images/PINE lab-logo NB.png"
           alt=""
           /> 
-          <a href="https://psyclin.github.io/PineLabs/index.html"></a>
+          <a href="index.html"></a>
           <p>Participation, Inclusion, and Education.</p>
           &nbsp;
         </div> 
@@ -51,24 +51,24 @@
           <h3 class="widget-title">Navigation</h3>
           <ul class="menu">
             <li class="">
-              <a href="https://psyclin.github.io/PineLabs/index.html">Home</a>
+              <a href="index.html">Home</a>
             </li>
             <li class="">
-              <a href="https://psyclin.github.io/PineLabs/group_projects.html">Projects</a>
+              <a href="group_projects.html">Projects</a>
             </li>
             <li class="">
-              <a href="https://psyclin.github.io/PineLabs/principal_investigators.html"
+              <a href="principal_investigators.html"
                 >Principal Investigators</a
               >
             </li>
             <li class="">
-              <a href="https://psyclin.github.io/PineLabs/lab_members.html">Lab Members</a>
+              <a href="lab_members.html">Lab Members</a>
             </li>
             <li class="">
-              <a href="https://psyclin.github.io/PineLabs/publications.html">Publications</a>
+              <a href="publications.html">Publications</a>
             </li>
             <li class="">
-              <a href="https://psyclin.github.io/PineLabs/knowledge_translation.html">Knowledge Translation</a>
+              <a href="knowledge_translation.html">Knowledge Translation</a>
             </li>
           </ul>
         </div>
