--- a/group_projects.html
+++ b/group_projects.html
@@ -140,10 +140,10 @@
                           <a
                             class="abs-link"
                             title=""
-                            href="https://psyclin.github.io/PineLabs/projects/participatory_action_research_for_peer_support_mentorship_development.html"
+                            href="projects/participatory_action_research_for_peer_support_mentorship_development.html"
                           >
                             <img
-                              src="https://psyclin.github.io/PineLabs/images/mentorship.png"
+                              src="images/mentorship.png"
                               alt=""
                           /></a>
                         </div>
@@ -151,7 +151,7 @@
                         <div class="item-content">
                           <h4 class="item-title">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/participatory_action_research_for_peer_support_mentorship_development.html"
+                              href="projects/participatory_action_research_for_peer_support_mentorship_development.html"
                               >Workplace psychological wellbeing: Participatory
                               Action Research for peer support mentorship
                               development
@@ -160,7 +160,7 @@
 
                           <div class="item-button darklinks">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/participatory_action_research_for_peer_support_mentorship_development.html"
+                              href="projects/participatory_action_research_for_peer_support_mentorship_development.html"
                               class="small-text"
                               >Learn More</a
                             >
@@ -179,16 +179,16 @@
                           <a
                             class="abs-link"
                             title=""
-                            href="https://psyclin.github.io/PineLabs/projects/validation_of_the_canadian_psychosocial_rehabilitation_competency_document.html"
+                            href="projects/validation_of_the_canadian_psychosocial_rehabilitation_competency_document.html"
                             ><img
-                              src="https://psyclin.github.io/PineLabs/images/Study Validation.png"
+                              src="PineLabs/images/Study Validation.png"
                               alt=""
                           /></a>
                         </div>
                         <div class="item-content">
                           <h4 class="item-title">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/validation_of_the_canadian_psychosocial_rehabilitation_competency_document.html"
+                              href="projects/validation_of_the_canadian_psychosocial_rehabilitation_competency_document.html"
                               >Validation of the Canadian psychosocial
                               rehabilitation competency document: A Delphi
                               Study</a
@@ -197,7 +197,7 @@
 
                           <div class="item-button darklinks">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/validation_of_the_canadian_psychosocial_rehabilitation_competency_document.html"
+                              href="projects/validation_of_the_canadian_psychosocial_rehabilitation_competency_document.html"
                               class="small-text"
                               >Learn More</a
                             >
@@ -216,9 +216,9 @@
                           <a
                             class="abs-link"
                             title=""
-                            href="https://psyclin.github.io/PineLabs/projects/student_alcohol_consumption_in_university_residences.html"
+                            href="projects/student_alcohol_consumption_in_university_residences.html"
                             ><img
-                              src="https://psyclin.github.io/PineLabs/images/student alcohol consumption.png"
+                              src="images/student alcohol consumption.png"
                               alt=""
                             />
                           </a>
@@ -226,7 +226,7 @@
                         <div class="item-content">
                           <h4 class="item-title">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/student_alcohol_consumption_in_university_residences.html"
+                              href="projects/student_alcohol_consumption_in_university_residences.html"
                               >Student alcohol consumption in university
                               residences: An institutional ethnographic
                               inquiry</a
@@ -235,7 +235,7 @@
 
                           <div class="item-button darklinks">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/student_alcohol_consumption_in_university_residences.html"
+                              href="projects/student_alcohol_consumption_in_university_residences.html"
                               class="small-text"
                               >Learn More</a
                             >
@@ -253,17 +253,17 @@
                           <a
                             class="abs-link"
                             title=""
-                            href="https://psyclin.github.io/PineLabs/projects/occupational_safety_and_workers_rights_among_new_working_age_immigrants.html"
+                            href="projects/occupational_safety_and_workers_rights_among_new_working_age_immigrants.html"
                           >
                             <img
-                              src="https://psyclin.github.io/PineLabs/images/Occupation Safety.png"
+                              src="images/Occupation Safety.png"
                               alt=""
                           /></a>
                         </div>
                         <div class="item-content">
                           <h4 class="item-title">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/occupational_safety_and_workers_rights_among_new_working_age_immigrants.html"
+                              href="projects/occupational_safety_and_workers_rights_among_new_working_age_immigrants.html"
                               >Occupational safety and workers&#39; rights among
                               new working age immigrants: The role of settlement
                               organizations</a
@@ -272,7 +272,7 @@
 
                           <div class="item-button darklinks">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/occupational_safety_and_workers_rights_among_new_working_age_immigrants.html"
+                              href="projects/occupational_safety_and_workers_rights_among_new_working_age_immigrants.html"
                               class="small-text"
                               >Learn More</a
                             >
@@ -296,10 +296,10 @@
                           <a
                             class="abs-link"
                             title=""
-                            href="https://psyclin.github.io/PineLabs/projects/towards_diversity_in_occupational_therapy_education.html"
+                            href="projects/towards_diversity_in_occupational_therapy_education.html"
                           >
                             <img
-                              src="https://psyclin.github.io/PineLabs/images/diversity study.png"
+                              src="images/diversity study.png"
                               alt=""
                           /></a>
                         </div>
@@ -307,7 +307,7 @@
                         <div class="item-content">
                           <h4 class="item-title">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/towards_diversity_in_occupational_therapy_education.html"
+                              href="projects/towards_diversity_in_occupational_therapy_education.html"
                               >Towards Diversity in Occupational Therapy
                               Education: An Integrated Admissions-and-Pathway
                               Strategy via Student Engagement</a
@@ -316,7 +316,7 @@
 
                           <div class="item-button darklinks">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/towards_diversity_in_occupational_therapy_education.html"
+                              href="projects/towards_diversity_in_occupational_therapy_education.html"
                               class="small-text"
                               >Learn More</a
                             >
@@ -334,9 +334,9 @@
                           <a
                             class="abs-link"
                             title=""
-                            href="https://psyclin.github.io/PineLabs/projects/information_and_knowledge-translation_for_canadians_experiencing_intersectional_marginalization.html"
+                            href="projects/information_and_knowledge-translation_for_canadians_experiencing_intersectional_marginalization.html"
                             ><img
-                              src="https://psyclin.github.io/PineLabs/images/Information Inequality.png"
+                              src="images/Information Inequality.png"
                               alt=""
                           /></a>
                         </div>
@@ -344,7 +344,7 @@
                         <div class="item-content">
                           <h4 class="item-title">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/information_and_knowledge-translation_for_canadians_experiencing_intersectional_marginalization.html"
+                              href="projects/information_and_knowledge-translation_for_canadians_experiencing_intersectional_marginalization.html"
                               >Exploring Access-Inequalities to Information and
                               Knowledge-Translation for Canadians Experiencing
                               Intersectional Marginalization
@@ -353,7 +353,7 @@
 
                           <div class="item-button darklinks">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/information_and_knowledge-translation_for_canadians_experiencing_intersectional_marginalization.html"
+                              href="projects/information_and_knowledge-translation_for_canadians_experiencing_intersectional_marginalization.html"
                               class="small-text"
                               >Learn More</a
                             >
@@ -371,9 +371,9 @@
                           <a
                             class="abs-link"
                             title=""
-                            href="https://psyclin.github.io/PineLabs/projects/refinement_and_further_development_of_the_washington_assessment.html"
+                            href="projects/refinement_and_further_development_of_the_washington_assessment.html"
                             ><img
-                              src="https://psyclin.github.io/PineLabs/images/Student Assessment.png"
+                              src="images/Student Assessment.png"
                               alt=""
                           /></a>
                         </div>
@@ -381,7 +381,7 @@
                         <div class="item-content">
                           <h4 class="item-title">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/refinement_and_further_development_of_the_washington_assessment.html"
+                              href="projects/refinement_and_further_development_of_the_washington_assessment.html"
                               >Refinement and Further Development of the
                               Washington Assessment of Risk and Needs of
                               Students
@@ -390,7 +390,7 @@
 
                           <div class="item-button darklinks">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/refinement_and_further_development_of_the_washington_assessment.html"
+                              href="projects/refinement_and_further_development_of_the_washington_assessment.html"
                               class="small-text"
                               >Learn More</a
                             >
@@ -408,10 +408,10 @@
                           <a
                             class="abs-link"
                             title=""
-                            href="https://psyclin.github.io/PineLabs/projects/validity_evidence_for_the_use_of_casper_in_admissions_decisions_and_prediction_of_performance_within_an_occupational_therapy_program.html"
+                            href="projects/validity_evidence_for_the_use_of_casper_in_admissions_decisions_and_prediction_of_performance_within_an_occupational_therapy_program.html"
                           >
                             <img
-                              src="https://psyclin.github.io/PineLabs/images/CASPr assessment.png"
+                              src="images/CASPr assessment.png"
                               alt=""
                             />
                           </a>
@@ -420,7 +420,7 @@
                         <div class="item-content">
                           <h4 class="item-title">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/validity_evidence_for_the_use_of_casper_in_admissions_decisions_and_prediction_of_performance_within_an_occupational_therapy_program.html"
+                              href="projects/validity_evidence_for_the_use_of_casper_in_admissions_decisions_and_prediction_of_performance_within_an_occupational_therapy_program.html"
                               >Validity Evidence for the Use of CASPer in
                               Admissions Decisions and Prediction of Performance
                               Within an Occupational Therapy Program
@@ -429,7 +429,7 @@
 
                           <div class="item-button darklinks">
                             <a
-                              href="https://psyclin.github.io/PineLabs/projects/validity_evidence_for_the_use_of_casper_in_admissions_decisions_and_prediction_of_performance_within_an_occupational_therapy_program.html"
+                              href="projects/validity_evidence_for_the_use_of_casper_in_admissions_decisions_and_prediction_of_performance_within_an_occupational_therapy_program.html"
                               class="small-text"
                               >Learn More</a
                             >
