--- a/header.html
+++ b/header.html
@@ -6,11 +6,11 @@
     <div class="row">
       <div class="col-lg-2 col-md-3 col-sm-5">
         <a
-          href="https://psyclin.github.io/PineLabs/index.html"
+          href="index.html"
           class="logo logo_image"
         >
           <img
-            src="https://psyclin.github.io/PineLabs/images/PINE lab-logo NB.png"
+            src="images/PINE lab-logo NB.png"
             alt=""
           />
         </a>
@@ -24,36 +24,36 @@
         <nav class="mainmenu_wrapper">
           <ul class="mainmenu nav sf-menu">
             <li class="active">
-              <a href="https://psyclin.github.io/PineLabs/index.html">Home</a>
+              <a href="index.html">Home</a>
             </li>
 
             <li>
-              <a href="https://psyclin.github.io/PineLabs/group_projects.html"
+              <a href="group_projects.html"
                 >Projects</a
               >
             </li>
 
             <li>
               <a
-                href="https://psyclin.github.io/PineLabs/principal_investigators.html"
+                href="principal_investigators.html"
                 >Principal Investigators</a
               >
             </li>
 
             <li>
-              <a href="https://psyclin.github.io/PineLabs/lab_members.html"
+              <a href="lab_members.html"
                 >Lab Members</a
               >
             </li>
 
             <li>
-              <a href="https://psyclin.github.io/PineLabs/publications.html"
+              <a href="publications.html"
                 >Publications</a
               >
             </li>
             <li>
               <a
-                href="https://psyclin.github.io/PineLabs/knowledge_translation.html"
+                href="knowledge_translation.html"
                 >Knowledge Translation</a
               >
             </li>
