--- a/projects/information_and_knowledge-translation_for_canadians_experiencing_intersectional_marginalization.html
+++ b/projects/information_and_knowledge-translation_for_canadians_experiencing_intersectional_marginalization.html
@@ -138,7 +138,7 @@
                 >
                   <div class="item-media">
                     <img id="picture"
-                    src=https://psyclin.github.io/PineLabs/images/gallery/03.jpg"
+                    src="https://psyclin.github.io/PineLabs/images/gallery/03.jpg"
                     alt="">
                   </div>
                   <div class="item-content text-center">
