alternate footer and header addition

--- a/index.html
+++ b/index.html
@@ -221,6 +221,6 @@
     <!-- eof #canvas -->
 
     <script src="js/compressed.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
