alternate footer and header addition

--- a/principal_investigators.html
+++ b/principal_investigators.html
@@ -372,6 +372,6 @@ My research program comprises two related areas of research. My primary research
     <!-- eof #canvas -->
 
     <script src="js/compressed.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
