--- a/group_projects.html
+++ b/group_projects.html
@@ -451,6 +451,6 @@
     <!-- eof #canvas -->
 
     <script src="js/compressed.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
