--- a/publications.html
+++ b/publications.html
@@ -463,6 +463,6 @@
     <!-- eof #canvas -->
 
     <script src="js/compressed.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
