modifying typoe to module for main.js

--- a/projects/validity_evidence_for_the_use_of_casper_in_admissions_decisions_and_prediction_of_performance_within_an_occupational_therapy_program.html
+++ b/projects/validity_evidence_for_the_use_of_casper_in_admissions_decisions_and_prediction_of_performance_within_an_occupational_therapy_program.html
@@ -19,22 +19,22 @@
 
     <link
       rel="stylesheet"
-      href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css"
+      href="css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="https://psyclin.github.io/PineLabs/css/animations.css"
+      href="css/animations.css"
     />
     <link
       rel="stylesheet"
-      href="https://psyclin.github.io/PineLabs/css/fonts.css"
+      href="css/fonts.css"
     />
     <link
       rel="stylesheet"
-      href="https://psyclin.github.io/PineLabs/css/main.css"
+      href="css/main.css"
       id="color-switcher-link"
     />
-    <script src="https://psyclin.github.io/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -139,7 +139,7 @@
                   <div class="item-media">
                     <img
                       id="picture"
-                      src="https://psyclin.github.io/PineLabs/images/gallery/03.jpg"
+                      src="images/gallery/03.jpg"
                       alt=""
                     />
                   </div>
@@ -170,7 +170,7 @@
     </div>
     <!-- eof #canvas -->
 
-    <script src="https://psyclin.github.io/PineLabs/js/compressed.js"></script>
-    <script src="https://psyclin.github.io/PineLabs/js/main.js"></script>
+    <script src="compressed.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
