--- a/members/hsin-hsiu_essential_yeh.html
+++ b/members/hsin-hsiu_essential_yeh.html
@@ -19,22 +19,22 @@
 
     <link
       rel="stylesheet"
-      href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css"
+      href="css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="https://psyclin.github.io/PineLabs/css/animations.css"
+      href="css/animations.css"
     />
     <link
       rel="stylesheet"
-      href="https://psyclin.github.io/PineLabs/css/fonts.css"
+      href="css/fonts.css"
     />
     <link
       rel="stylesheet"
-      href="https://psyclin.github.io/PineLabs/css/main.css"
+      href="css/main.css"
       id="color-switcher-link"
     />
-    <script src="https://psyclin.github.io/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -135,7 +135,7 @@
               <div class="col-md-5">
                 <div class="text-center">
                   <img
-                    src="https://psyclin.github.io/PineLabs/images/team/Hsin-Hsiu-Yeh.jpg"
+                    src="images/team/Hsin-Hsiu-Yeh.jpg"
                     alt=""
                     class="round"
                   />
@@ -251,7 +251,7 @@
     </div>
     <!-- eof #canvas -->
 
-    <script src="https://psyclin.github.io/PineLabs/js/compressed.js"></script>
-    <script src="https://psyclin.github.io/PineLabs/js/main.js"></script>
+    <script src="js/compressed.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
