--- a/members/selina_fan.html
+++ b/members/selina_fan.html
@@ -18,22 +18,22 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link
       rel="stylesheet"
-      href="css/bootstrap.min.css"
+      href="../css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="css/animations.css"
+      href="../css/animations.css"
     />
     <link
       rel="stylesheet"
-      href="css/fonts.css"
+      href="../css/fonts.css"
     />
     <link
       rel="stylesheet"
-      href="css/main.css"
+      href="../css/main.css"
       id="color-switcher-link"
     />
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="../js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -134,7 +134,7 @@
               <div class="col-md-5">
                 <div class="text-center">
                   <img
-                    src="images/team/Selina-Fan-3.jpg"
+                    src="../images/team/Selina-Fan-3.jpg"
                     alt=""
                     class="round"
                   />
@@ -247,7 +247,7 @@
     </div>
     <!-- eof #canvas -->
 
-    <script src="js/compressed.js"></script>
-    <script type="module" src="js/main.js"></script>
+    <script src="../js/compressed.js"></script>
+    <script type="module" src="../js/main.js"></script>
   </body>
 </html>
