modifying locations for files test

--- a/members/rosanna_wegner.html
+++ b/members/rosanna_wegner.html
@@ -19,22 +19,22 @@
 
     <link
       rel="stylesheet"
-      href="css/bootstrap.min.css"
+      href="../css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="css/animations.css"
+      href="../css/animations.css"
     />
     <link
       rel="stylesheet"
-      href="css/fonts.css"
+      href="../css/fonts.css"
     />
     <link
       rel="stylesheet"
-      href="css/main.css"
+      href="../css/main.css"
       id="color-switcher-link"
     />
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="../js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -135,7 +135,7 @@
               <div class="col-md-5">
                 <div class="text-center">
                   <img
-                    src="images/team/Rosanna Wegner.jpg"
+                    src="../images/team/Rosanna Wegner.jpg"
                     alt=""
                     class="round"
                   />
@@ -219,7 +219,7 @@ participants with lived experience.
     </div>
     <!-- eof #canvas -->
 
-    <script src="js/compressed.js"></script>
-    <script type="module" src="js/main.js"></script>
+    <script src="../js/compressed.js"></script>
+    <script type="module" src="../js/main.js"></script>
   </body>
 </html>
