--- a/projects/towards_diversity_in_occupational_therapy_education.html
+++ b/projects/towards_diversity_in_occupational_therapy_education.html
@@ -34,12 +34,12 @@
       href="css/main.css"
       id="color-switcher-link"
     />
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="../js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
-      <script src="js/vendor/html5shiv.min.js"></script>
-      <script src="js/vendor/respond.min.js"></script>
-      <script src="js/vendor/jquery-1.12.4.min.js"></script>
+      <script src="../js/vendor/html5shiv.min.js"></script>
+      <script src="../js/vendor/respond.min.js"></script>
+      <script src="../js/vendor/jquery-1.12.4.min.js"></script>
     <![endif]-->
   </head>
 
@@ -178,7 +178,7 @@
     </div>
     <!-- eof #canvas -->
 
-    <script src="js/compressed.js"></script>
-    <script type="module" src="js/main.js"></script>
+    <script src="../js/compressed.js"></script>
+    <script type="module" src="../js/main.js"></script>
   </body>
 </html>
