--- a/projects/validity_evidence_for_the_use_of_casper_in_admissions_decisions_and_prediction_of_performance_within_an_occupational_therapy_program.html
+++ b/projects/validity_evidence_for_the_use_of_casper_in_admissions_decisions_and_prediction_of_performance_within_an_occupational_therapy_program.html
@@ -19,27 +19,27 @@
 
     <link
       rel="stylesheet"
-      href="css/bootstrap.min.css"
+      href="../css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="css/animations.css"
+      href="../css/animations.css"
     />
     <link
       rel="stylesheet"
-      href="css/fonts.css"
+      href="../css/fonts.css"
     />
     <link
       rel="stylesheet"
-      href="css/main.css"
+      href="../css/main.css"
       id="color-switcher-link"
     />
-    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="../js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
-      <script src="js/vendor/html5shiv.min.js"></script>
-      <script src="js/vendor/respond.min.js"></script>
-      <script src="js/vendor/jquery-1.12.4.min.js"></script>
+      <script src="../js/vendor/html5shiv.min.js"></script>
+      <script src="../js/vendor/respond.min.js"></script>
+      <script src="../js/vendor/jquery-1.12.4.min.js"></script>
     <![endif]-->
   </head>
 
@@ -170,7 +170,7 @@
     </div>
     <!-- eof #canvas -->
 
-    <script src="compressed.js"></script>
-    <script type="module" src="main.js"></script>
+    <script src="../js/compressed.js"></script>
+    <script type="module" src="../js/main.js"></script>
   </body>
 </html>
