modifying locations for files test

--- a/group_projects.html
+++ b/group_projects.html
@@ -181,7 +181,7 @@
                             title=""
                             href="projects/validation_of_the_canadian_psychosocial_rehabilitation_competency_document.html"
                             ><img
-                              src="PineLabs/images/Study Validation.png"
+                              src="images/Study Validation.png"
                               alt=""
                           /></a>
                         </div>
