--- a/projects/information_and_knowledge-translation_for_canadians_experiencing_intersectional_marginalization.html
+++ b/projects/information_and_knowledge-translation_for_canadians_experiencing_intersectional_marginalization.html
@@ -19,19 +19,19 @@
 
     <link
       rel="stylesheet"
-      href="css/bootstrap.min.css"
+      href="../css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="css/animations.css"
+      href="../css/animations.css"
     />
     <link
       rel="stylesheet"
-      href="css/fonts.css"
+      href="../css/fonts.css"
     />
     <link
       rel="stylesheet"
-      href="css/main.css"
+      href="../css/main.css"
       id="color-switcher-link"
     />
     <script src="../js/vendor/modernizr-2.6.2.min.js"></script>
