--- a/projects/occupational_safety_and_workers_rights_among_new_working_age_immigrants.html
+++ b/projects/occupational_safety_and_workers_rights_among_new_working_age_immigrants.html
@@ -19,19 +19,19 @@
 
     <link
       rel="stylesheet"
-      href="css/bootstrap.min.css"
+      href="../css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="css/animations.css"
+      href="../css/animations.css"
     />
     <link
       rel="stylesheet"
-      href="css/fonts.css"
+      href="../css/fonts.css"
     />
     <link
       rel="stylesheet"
-      href="css/main.css"
+      href="../css/main.css"
       id="color-switcher-link"
     />
     <script src="../js/vendor/modernizr-2.6.2.min.js"></script>
