linking member images

--- a/lab_members.html
+++ b/lab_members.html
@@ -127,7 +127,10 @@
                     <div
                       class="thumbnail top-color-border with_background with_padding"
                     >
-                      <img src="images/team/Hsin-Hsiu-Yeh.jpg" alt="" />
+                      <a href="members/hsin-hsiu_essential_yeh.html"
+                        ><img src="images/team/Hsin-Hsiu-Yeh.jpg" alt=""
+                      /></a>
+
                       <div class="caption">
                         <h3>
                           <a href="members/hsin-hsiu_essential_yeh.html"
@@ -150,7 +153,10 @@
                     <div
                       class="thumbnail top-color-border with_background with_padding"
                     >
-                      <img src="images/team/02.jpg" alt="" />
+                      <a href="members/fatema_akbar.html">
+                        <img src="images/team/02.jpg" alt=""
+                      /></a>
+
                       <div class="caption">
                         <h3>
                           <a href="members/fatema_akbar.html">Fatema Akbar</a>
@@ -169,7 +175,10 @@
                     <div
                       class="thumbnail top-color-border color2 with_background with_padding"
                     >
-                      <img src="images/team/Selina-Fan-3.jpg" alt="" />
+                      <a href="members/selina_fan.html"
+                        ><img src="images/team/Selina-Fan-3.jpg" alt=""
+                      /></a>
+
                       <div class="caption">
                         <h3>
                           <a href="members/selina_fan.html">Selina Fan</a>
@@ -188,7 +197,10 @@
                     <div
                       class="thumbnail top-color-border color4 with_background with_padding"
                     >
-                      <img src="images/team/05.jpg" alt="" />
+                      <a href="members/john_hu.html"
+                        ><img src="images/team/05.jpg" alt=""
+                      /></a>
+
                       <div class="caption">
                         <h3>
                           <a href="members/john_hu.html">John Hu</a>
@@ -230,7 +242,10 @@
                     <div
                       class="thumbnail top-color-border with_background with_padding"
                     >
-                      <img src="images/team/Priya Kar.jpg" alt="" />
+                      <a href="members/priya_kar.html"
+                        ><img src="images/team/Priya Kar.jpg" alt=""
+                      /></a>
+
                       <div class="caption">
                         <h3>
                           <a href="members/priya_kar.html">Priya Kar</a>
@@ -249,7 +264,10 @@
                     <div
                       class="thumbnail top-color-border with_background with_padding"
                     >
-                      <img src="images/team/Rosanna Wegner.jpg" alt="" />
+                      <a href="members/rosanna_wegner.html"
+                        ><img src="images/team/Rosanna Wegner.jpg" alt=""
+                      /></a>
+
                       <div class="caption">
                         <h3>
                           <a href="members/rosanna_wegner.html"
@@ -272,18 +290,17 @@
                     <div
                       class="thumbnail top-color-border color2 with_background with_padding"
                     >
-                      <img src="images/team/Amir Shamsi Ardekani.jpg" alt="" />
+                      <a href="members/amir_shamsi.html"
+                        ><img src="images/team/Amir Shamsi Ardekani.jpg" alt=""
+                      /></a>
+
                       <div class="caption">
                         <h3>
-                          <a href="members/amir_shamsi.html"
-                            >Amir Shamsi</a
-                          >
+                          <a href="members/amir_shamsi.html">Amir Shamsi</a>
                         </h3>
                         <p>Masters student, University of Alberta</p>
                         <div class="item-button darklinks">
-                          <a
-                            href="members/amir_shamsi.html"
-                            class="small-text"
+                          <a href="members/amir_shamsi.html" class="small-text"
                             >About</a
                           >
                         </div>
@@ -296,30 +313,28 @@
           </div>
         </section>
         <section
-        class="page_breadcrumbs cs main_color2 parallax section_padding_25"
-      >
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12 text-center">
-              <h2>Previous Members</h2>
+          class="page_breadcrumbs cs main_color2 parallax section_padding_25"
+        >
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12 text-center">
+                <h2>Previous Members</h2>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <section
-      class="ls page_portfolio section_padding_top_25 section_padding_bottom_25"
-    >
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            
-              <h3 style="text-align: center;" > Coming soon...</h3>
-
+        <section
+          class="ls page_portfolio section_padding_top_25 section_padding_bottom_25"
+        >
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12">
+                <h3 style="text-align: center">Coming soon...</h3>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-    </section>
+        </section>
 
         <div id="footer"></div>
         <!-- eof #box_wrapper -->
